@@ -1,0 +1,7 @@
+all: xournal.res
+all-recursive: all
+install-recursive:
+install:
+
+xournal.res: xournal.rc
+	windres xournal.rc -O coff -o xournal.res
