@@ -1,3 +1,6 @@
+This version:
+  - win32 portability code (contributed by Dirk Gerrits)
+
 Version 0.4.5 (Oct 2, 2009):
   - bugfixes for GTK+ 2.16/2.17 issues with xinput events
   - various minor UI bugfixes
